<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_service"
    tools:context=".ui.reports.ReportsFragment">

    <LinearLayout
        android:id="@+id/text_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:background="@drawable/password_background"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/EmailText"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">



            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:contentDescription="@string/null1"
                android:id="@+id/email_button"
                android:background="@drawable/password_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:id="@+id/email_adres"
                android:textSize="20sp"
                android:text="@string/Email"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/PhoneText"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">



            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:id="@+id/phone_button"
                android:contentDescription="@string/null1"
                android:background="@drawable/password_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="20sp"
                android:id="@+id/phone_number"
                android:text="@string/phoneNumber"/>
        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>