<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="@drawable/background_reports"
    tools:context=".ui.reports.ReportsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_reports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/realized_pdf_text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp" />



        <ImageButton
            android:id="@+id/create_pdf_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/download"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/pdf_button"
          />

        <ImageButton
            android:id="@+id/deleteRealizedButton"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/delete_realized"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/delete_realized"
            android:background="@drawable/delete_realized_button" />

        <TextView
            android:id="@+id/text_reports_comptain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reports_pdf_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/create_pdf_button_comptain"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/download"
            android:gravity="center"
            android:background="@drawable/pdf_button" />

        <ImageButton
            android:id="@+id/deleteComplaintButton"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/delete_complaint"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/delete_complaint"
            android:background="@drawable/delete_complaint_button" />
    </LinearLayout>

</ScrollView>