<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/drawer_background"
    android:gravity="bottom|right"
    android:orientation="horizontal"
    android:id="@+id/navigation_header_container"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:ignore="RtlHardcoded">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/icon" />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="125dp"
        android:orientation="vertical"
        android:id="@+id/HeaderLayout"
        android:layout_gravity="bottom|right"
        android:gravity="bottom|right"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_gravity="right"
        android:gravity="right"
        android:id="@+id/employee"
        android:text="@string/nav_header_title"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/userTextInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_marginBottom="5dp" 
        android:text="@string/nav_header_subtitle" />


    </LinearLayout>
</LinearLayout>